# meson_rc_test

./: main.cpp  meson.build  test.qrc.meson.in
